========================================
Change log for block_taskchain_navigation
========================================

2020-06-30 (22)
 - add settings for individual grades in the grade book

2020-05-12 (21)
 - small fix to SQL for compatability with PostgreSQL

2019-11-10 (20)
 - standardize layout and spelling in CHANGES.txt

2019-07-31 (17)
 - fix display and setting of hidden sections via taskchain_navigation block

2019-07-30 (16)
 - Fix errors about incomplete object, caused by class not existing before unserialize

2019-06-10 (15)
 - fix 'continue' statement within 'switch' block

2019-05-30 (14)
 - remove 'continue' statement inside SWITCH block

2019-05-25 (13)
 - be aware availability settings when deciding whether or not to display a link to a section
 - remove tags from 'title' attribute of section links

2018-03-16 (11)
 - do not remove Javascript from Section 0 that is not connected to this block

2018-02-27 (10)
 - prevent text color of nav links being overridden by theme

2018-02-12 (09)
 - replace obsolete lang string, 'finalgrade', with 'coursegrade'

2018-01-04 (08)
 - fix SQL to fetch group menu when groupmode is SEPARATE_GROUPS

2017-09-04 (07)
 - remove nested use of loop index, $i, when checking availability conditions

2017-09-02 (06)
 - fix undefined variables ($labelmods, $resourcemods, $course, $cm) in is_valid_restriction() method

2017-06-27 (05)
 - handle activities, such as workshop, that have more than one grade item

2017-06-16 (04)
 - rename $str variable to $chars for readability and to avoid confusion with $str variable used elsewhere

2017-06-15 (03)
 - fix typo introduced in previous commit

2017-06-15 (02)
 - allow visibility setting for stealth activities in Moodle >= 3.3

2017-06-12 (01)
 - accommodate new availablefrom/until fields in Reader module

2017-06-08 (00)
 - fix faulty version number in recent commit
 - use 'prop' instead of 'attr' when getting and setting element properties

2017-06-07 (99)