@@ -2,6 +2,9 @@
 Change log for block_taskchain_navigation
 ========================================
 
+2020-07-01 (23)
+ - add duedate (used by assign) to list of modifiable dates
+
 2020-06-30 (22)
  - add settings for individual grades in the grade book
 
